TECH-1246 fix layout issues with cards

--- a/pages/static/src/scss/components/_card.scss
+++ b/pages/static/src/scss/components/_card.scss
@@ -51,7 +51,7 @@
 
   .card {
     width: 23.5%;
-    height: 125px;;
+    height: 125px;
     background: #f5f5f5;
     display: inline-block;
     overflow: hidden;
@@ -80,7 +80,7 @@
     }
 
     &__content {
-      height: 125px;;
+      height: 125px;
       position: relative;
     }
 
@@ -108,7 +108,7 @@
   .card__photo {
     display: inline-block;
     border-radius: 3px 0 0 3px;
-    height: 125px;;
+    height: 125px;
     width: 100px;
     background: #999;
     background-size: cover;
@@ -117,7 +117,7 @@
 
   .card__item {
     display: block;
-    line-height: 1.25em;
+    line-height: 1.1em;
 
     &.bold {
       font-weight: bolder;
@@ -130,14 +130,15 @@
 
     &.bottom {
       position: absolute;
-      left: 10px;
-      bottom: 10px;
+      bottom: 0px;
+      left: 0px;
+      padding: 0 10px 10px 10px;
 
       &.large {
-        bottom: 15px;
+        bottom: 5px;
         font-size: 18px;
         font-weight: 700;
-        left: 20px;
+        left: 10px;
       }
     }
   }
